--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
         env: # Or as an environment variable
-          super_secret: ${{ secrets.SuperSecret }}
+          super_secret: ${{ secrets.MY_SAMPLE_SECRET }}
       - run: printenv
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
